<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>racecar_neo_ros2_driver</name>
  <version>0.0.6</version>
  <description>
    ROS2 driver for the MIT RACECAR Neo v2 — sensor/actuator drivers, command
    arbitration, safety/uptime/recovery infrastructure (watchdog, systemd units,
    pre-flight tests) inherited from the UAV Neo driver architecture.
  </description>
  <maintainer email="chrisclai02@gmail.com">racecar</maintainer>
  <license>GPL-3.0-or-later</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>joy</depend>
  <depend>gscam</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
